<resources>
    <string name="app_name">Word Warrior</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="enter_letters_here">Enter Letters Here</string>
    <string name="results">Results</string>
    <string name="how_to">How to Play</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="perfect">Perfect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="submit">Submit</string>
    <string name="new_game">New Game</string>
    <string name="solutions">Solutions</string>
    <string name="more">More</string>
    <string name="ok">OK</string>
    <string name="textView">TextView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">(0)</string>
    <string name="exit">Exit</string>

    <string name="target_info">"Create as many 4+ letter words as you can using the letters displayed. Each word must contain the center letter."</string>
    <string name="scrabble_info">From a 6x6 grid of letters, the challenge is to form as many high scoring words as possible. Words may only be formed from sequences of adjacent tiles. Two tiles are adjacent if their edges or corners meet.A tile can only be used once.</string>
    <string name="arcade_info">Basically, stop the bugs from getting through. Congratulations, You are now a debugger.</string>
    <string name="no_items_message">Nothing to see here.</string>
    <string name="use_points">Use Points</string>
    <string name="cancel_purchase">I\'m too cheap for this</string>
    <string name="use_points_prompt">Nothing is for free. Use your points to perform this action.</string>
    <string name="insufficient_points">Well this is embarrassing. You\'re too broke for this.</string>
    <string name="waiting_message">This might take a minute</string>
    <string name="done">Done</string>
    <string name="no_option_selected">No option Selected</string>
    <string name="games">Games</string>
    <string name="target">Target</string>
    <string name="scrabble">Scrabble</string>
    <string name="arcade">Arcade</string>
    <string name="reset_profile">Reset Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="eula">EULA</string>
    <string name="version_name">2.0 (alpha)</string>
    <string name="developer_name">Sir K.R. Carter</string>
    <string name="developed_by">Developed By:</string>
    <string name="time_zero">00:00</string>
    <string name="high_scores">High Scores</string>
    <string name="saved_games">Saved Games</string>
    <string name="dashboard">Dashboard</string>
    <string name="info">How To Play</string>
    <string name="eula_text">"EULA

        Note: all the clauses contained in this agreement are standard clauses about software products, however it is advised that you read them entirely)

        This End-User License Agreement ("EULA") constitutes an agreement between you and Depression Studios (herein referred to as the "Owner") with regard to the WordWarrior Application for Android-based Mobile Phones (herein referred to as "Software Product" or "Software"). By installing the Software, you are agreeing to be bound by the terms of this license agreement.

Your use of the Software (as specified below) is subject to the terms and conditions set forth in this EULA. If you do not accept the terms of this EULA, do not install or use the Software.

1. LICENSE. The Software is licensed, not sold. The Owner grants you a non-exclusive, non-transferable, non-sublicensable, limited right and license to use one copy of the Software for your personal non-commercial use on a single device. The rights granted herein are subject to your compliance with this EULA. The Software is being licensed to you and you hereby acknowledge that no title or ownership in the Software is being transferred or assigned and this EULA is not to be construed as a sale of any rights in the Software.

2. RESTRICTIONS OF USE. Unless the Owner has authorized you to distribute the Software, you shall not make or distribute copies of the Software or transfer the Software from one device to another. You shall not decompile, reverse engineer, disassemble, include in other software, or translate the Software, or use the Software for any commercial purposes. You shall not modify, alter, change or otherwise make any modification to the Software or create derivative works based upon the Software. You shall not rent, lease, resell, sub-license, assign, distribute or otherwise transfer the Software or this license. Any attempt to do so shall be void and of no effect.

3. COPYRIGHT. You acknowledge that no title to the intellectual property in the Software is transferred to you. You further acknowledge that title and full ownership rights to the Software will remain the exclusive property of Depression Studio, and you will not acquire any rights to the Software. You shall not remove or obscure the Owner\'s copyright, trade mark or other proprietary notices from any of the materials contained in this package or downloaded together with the Software.

4. DISCLAIMER OF WARRANTY. The Software is provided "AS IS", without warranty of any kind. We disclaim and make no express or implied warranties and specifically disclaim the warranties of merchantability, fitness for a particular purpose and non-infringement of third-party rights. The entire risk as to the quality and performance of the Software is with you. We do not warrant that the functions contained in the Software will meet your requirements or that the operation of the Software will be error-free.

5. LIMITATION OF LIABILITY. In no event will the Owner be liable for special, incidental or consequential damages resulting from possession, access, use or malfunction of the Software, including but not limited to damages to property, loss of goodwill, computer or mobile device malfunction and, to the extent permitted by law, damages for personal injuries, property damage, lost profits or punitive damages from any causes of action arising out of or related to this EULA or the Software, whether arising in tort (including negligence), contract, strict liability or otherwise and whether or not the Owner has been advised of the possibility of such damages.

Because some states/countries do not allow certain limitations of liability, this limitation of liability shall apply to the fullest extent permitted by law in the applicable jurisdiction. This limitation of liability shall not be applicable solely to the extent that any specific provision of this limitation of liability is prohibited by any federal, state, or municipal law, which cannot be pre-empted. This EULA gives you specific legal rights, and you may have other rights that vary from jurisdiction to jurisdiction.

In no event shall the Owner\'s liability for all damages (except as required by applicable law) exceed the actual price paid by you for use of the Software.

6. PRIVACY. No private information is ever collected.

7. INDEMNITY. You agree to indemnify, defend and hold the Owner harmless from and against any and all damages, losses and expenses arising directly or indirectly from: (i) your acts and omissions to act in using the Software pursuant to the terms of the EULA; or (ii) your breach of this EULA.

Depression Studios"</string>
    <string name="solver_menu_item_string">Solver</string>
</resources>
