<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />
        <item
            android:icon="@drawable/ic_game"
            android:title="@string/games">
            <menu>
                <item
                    android:id="@+id/target"
                    android:icon="@drawable/ic_target"
                    android:title="@string/target" />
                <item
                    android:id="@+id/scrabble"
                    android:icon="@drawable/ic_scrabble"
                    android:title="@string/scrabble" />
                <item
                    android:id="@+id/arcade"
                    android:icon="@drawable/ic_game"
                    android:title="@string/arcade" />
            </menu>
        </item>

    </group>

    <group android:id="@+id/group_about">
        <item
            android:id="@+id/reset_profile"
            android:icon="@drawable/ic_reset"
            android:title="@string/reset_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>


</menu>
