<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:theme="@style/MyDialogTheme">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/use_points_prompt"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@android:string/unknownName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/insufficientPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentBalance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/insufficient_points"
        android:textColor="@color/warning_red"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/purchases_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/insufficientPoints"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:choiceMode="singleChoice"
        tools:listitem="@android:layout/simple_list_item_single_choice" />

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/purchases_List"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/use_points" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/purchaseButton"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/purchaseButton"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/cancel_purchase" />

</RelativeLayout>