<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/perfectStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/perfectTextView"
        app:layout_constraintRight_toRightOf="@+id/perfectTextView"
        app:layout_constraintTop_toBottomOf="@+id/perfectTextView"
        app:srcCompat="@drawable/target_indicator" />

    <ImageView
        android:id="@+id/greatStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/greatTextView"
        app:layout_constraintRight_toRightOf="@+id/greatTextView"
        app:layout_constraintTop_toBottomOf="@+id/greatTextView"
        app:srcCompat="@drawable/target_indicator" />

    <ImageView
        android:id="@+id/goodStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/goodTextView"
        app:layout_constraintRight_toRightOf="@+id/goodTextView"
        app:layout_constraintTop_toBottomOf="@+id/goodTextView"
        app:srcCompat="@drawable/target_indicator" />

    <TextView
        android:id="@+id/goodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/good"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/greatTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/great"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/goodTextView"
        app:layout_constraintLeft_toRightOf="@+id/goodTextView"
        app:layout_constraintRight_toLeftOf="@+id/perfectTextView"
        app:layout_constraintTop_toTopOf="@+id/goodTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/perfectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/perfect"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/greatTextView"
        app:layout_constraintLeft_toRightOf="@+id/greatTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/greatTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:text="@string/time_zero"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintLeft_toLeftOf="@+id/greatStar"
        app:layout_constraintRight_toRightOf="@+id/greatStar"
        app:layout_constraintTop_toBottomOf="@+id/greatStar" />

</android.support.constraint.ConstraintLayout>